# fleet-controller

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml
device-simulator/: Dockerfile  pyproject.toml  simulator.py  start.sh  updater.py
device-updater-rs/: Cargo.toml
device-updater-rs/src/: main.rs
fleet-integration/: example_device.py  pyproject.toml
fleet-integration-rs/: Cargo.toml
fleet-integration-rs/examples/: example_device.rs
fleet-integration-rs/src/: config.rs  device.rs  lib.rs  models.rs
fleet-integration/fleet_integration/: __init__.py  config.py  device.py  models.py
fleet-server/: Dockerfile  alembic.ini  pyproject.toml
fleet-server/alembic/: env.py
fleet-server/alembic/versions/: 001_initial.py  002_add_response_to_command_logs.py  003_add_version_to_device_stats.py  004_replace_sensors_with_device_stats.py  005_add_update_tables.py  006_add_device_current_version.py
fleet-server/app/: config.py  database.py  main.py  models.py  mqtt_client.py  schemas.py
fleet-server/app/routers/: devices.py  factories.py  stats.py  updates.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: Dashboard.tsx  DeviceCard.tsx  DeviceDetail.tsx  SensorChart.tsx  UpdatesPage.tsx
frontend/themes/: blue.js  orange.js
