[package]
name = "device-updater-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive", "env"] }
env_logger = "0.11.10"
hex = "0.4.3"
log = "0.4.29"
rand = "0.9.2"
reqwest = { version = "0.13.2", features = ["blocking", "stream"] }
rumqttc = "0.25.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tempfile = "3.27.0"
tokio = { version = "1.50.0", features = ["full"] }
zip = "=8.3.0"
